	Changes by viiri:
	- fix samples corruption in STM modules
	- support more versions of STM modules
	Changes by Ozkan Sezer:
	- xmp_get_format_list() now returns const char* const*, not char**
	  (no ABI change)
	- xmp_test_module, xmp_load_module, xmp_set_instrument_path and
	  xmp_smix_load_sample() now accept const char* path parameters
	  (no ABI change)
	- explicitly document that callers of xmp_load_module_from_file()
	  are responsible for closing their own file.
	- remove nonportable use of fdopen in xmp_load_module_from_file()
	- fix a seek issue with xmp_load_module_from_memory
	- fix memory-io functions' error handling
	- fix number of envelope points sanity check in IMF loader
	- rewrite the UMX loader
	- revise sanity checks to prevent oob reads in s404 depacker
	- fix vorbis depacker to function properly on big endian systems
	- fix windows static library builds
	- fix win64 compatibility in ptpopen
	- fix build with C89 compilers
	- fix issues related to visibility attributes
	- fix compatibility with old gcc, mingw, djgpp
	- fix warnings in configure script
	- fix Watcom C build on OS/2
	- fix Amiga build
	- several code clean-ups
	Changes by Carsten Teibes:
	- fix lite build mod loader symbols
	Changes by NoSuck:
	- add new xmp_set_row() call to skip replay to the given row
	- IT: T00 now repeats previous slide
	- prevent clobbering of muted channels' volumes in IT modules
	- clamp number of IT envelope nodes at load time
	- fix IT message (comment) length miscalculation
	- fix IT volume panning effect
	- fix mute status on player creation
	Changes by Cameron Cawley:
	- fix sanity check in Digital Symphony loader
	Changes by Ghabry:
	- add xmp_test_module_from_memory and xmp_test_module_from_file
	  calls to api
	Fix problems reported by Ralf Hoffmann:
	- fix MMD3 instrument type sanity check
	- fix strictness of MOD pattern data tester
	- fix loading of XMLiTE XM modules
	- fix loading of ST modules with invalid names